# rust-minesweeper

./: Cargo.toml
ffi/lib/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.rs
ffi/lib/src/: lib.rs  main.cpp
ffi/main/: Cargo.toml  Makefile
ffi/main/lib/: Cargo.toml  build.rs
ffi/main/lib/src/: lib.cpp  lib.rs
ffi/main/src/: main.rs
src/: adapter.rs  args.rs  coordinations.rs  lib.rs  main.rs
src/game/: mod.rs  session.rs  types.rs
src/game/client/: field.rs  session.rs
src/game/local/: manager.rs  mod.rs  server.rs  session.rs
src/game/multiplayer/: mod.rs  types.rs
src/game/multiplayer/master/: manager.rs  messenger_thread.rs  mod.rs  (+3 more)
src/game/server/: field.rs  mod.rs  session.rs
src/graphics/: input.rs  mod.rs  status.rs  textures.rs
src/intermezzo/: cache.cpp  find_pattern_in.rs  input.cpp  input.rs  ranges.rs
testscripts/: containers_001_fill_vec_len.sh  containers_002_fill_vec_content.sh  containers_003_setter_index.sh  containers_004_setter_panic.sh  containers_005_getter_index.sh  containers_006_getter_panic.sh  containers_007_setters_indices.sh  containers_008_setters_panic.sh  formatting_001_debug.sh  formatting_002_display.sh  formatting_003_display_return_err.sh  iterators_001_server_field_concept_cells.sh  iterators_002_mp_server_slave_namer.sh  iterators_003_mp_server_master_names.sh  iterators_004_coordinations_neighbors.sh  syntax_001_coordinations_construction.sh  syntax_003_coordinations_rows_and_height.sh  syntax_004_coordinations_size.sh  syntax_005_coordinations_to_coord.sh  syntax_006_coordinations_to_index.sh
(+9 files in other folders)
